--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,10 +57,10 @@
 
   <div class="flex" style="margin-top: 10%;">
     <div class='container' dragula="COPYABLE" id="left">
-      <div class="vamp" *ngFor="let item of contentLeft">{{item.text}}</div>
+      <div class="vamp" *ngFor="let item of contentLeft">{{item.text}}{{item.text2}}</div>
     </div>
     <div class='container' dragula="COPYABLE" id="right">
-      <div class="vamp" *ngFor="let item of contentRight">{{item.text}}</div>
+      <!-- <div class="vamp" *ngFor="let item of contentRight">{{item.text}}</div> -->
     </div>
   </div>
 
